bynkc/tests/fixtures/negative/481_messages_multiple_reference/src/bundle.bynk
commons bundle

uses bynk.locale

messages en @reference {
  "a" => "b"
}

messages fr @reference {
  "a" => "c"
}
